2021-03-29  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert: All the verbose messages are not beginning with a lowercase letter
	* check_ssl_cert: Added the possibility to have different verbose and debug levels
	* check_ssl_cert: Cleaner verbose output

2021-03-25  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert (fetch_certificate): Better error handling in case a TLS connection is not possible

2021-03-22  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert (usage): adds a --all option to allow all the optional checks at the maximum level

2021-03-22  Matteo Corti  <corti@matteo.ethz.ch>

	* check_ssl_cert (fetch_certificate): detecting a timeout on the OpenSSL level

2021-03-15  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert (openssl_version): works on systems which add a string to the OpenSSL version output (+ several fixes)

2021-03-14  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert (openssl_version): added a function to compare OpenSSL versions. Getting rid of the man dependency

2021-03-12  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert (exec_with_timeout): fixing timeout on systems using 'timeout'

2021-03-12  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert (exec_with_timeout): reducing the total timeout by each execution
	* check_ssl_cert (check_attr): check chiphers with nmap

	* check_ssl_cert (check_ocsp): looping over all the supplied URIs

2021-03-11  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert (check_attr): Setting GZIP to quiet (-q) before using man

2021-03-10  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert (main): Improved renegotiation testing
	* check_ssl_cert (fetch_certificate): Added --password to specify a password source for PCKS12 certificates

2021-03-09  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert (main): Added missing processing of the --inetproto option
	* check_ssl_cert (main): Added a sanity check for the protocol support of s_client
	* check_ssl_cert (check_ocsp): skipping empty certificates