@@ -156,6 +156,18 @@ testMissingArgument2() {
     assertEquals "wrong exit code" "${NAGIOS_UNKNOWN}" "${EXIT_CODE}"
 }
 
+testGroupedVariables() {
+    ${SCRIPT} --rootcert-file cabundle.crt -H www.google.com -vvv > /dev/null 2>&1
+    EXIT_CODE=$?
+    assertEquals "wrong exit code" "${NAGIOS_OK}" "${EXIT_CODE}"
+}
+
+testGroupedVariablesError() {
+    ${SCRIPT} --rootcert-file cabundle.crt -H www.google.com -vvxv > /dev/null 2>&1
+    EXIT_CODE=$?
+    assertEquals "wrong exit code" "${NAGIOS_UNKNOWN}" "${EXIT_CODE}"
+}
+
 testETHZ() {
     ${SCRIPT} --rootcert-file cabundle.crt -H ethz.ch --cn ethz.ch
     EXIT_CODE=$?
