@@ -1,1 +1,3 @@
-Fixed the man page, README and --help output (some options were missing)
+ * Fixed the man page, ```README.md``` and ```--help``` output (some options were missing)
+ * Short options can be grouped (e.g., ```-vs -c 10 -w 15```)
+ * Different verbosity levels can be specified (```-v``` can be used more than once)
